--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-for-me",
   "version": "1.0.0",
-  "description": "Сборка gulp",
+  "description": "whxdatboy-gulp",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
