--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "whxdatbxy",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -39,5 +39,9 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
     "uglify-es": "^3.3.9"
+  },
+  "dependencies": {
+    "normalize-url": "^6.0.1",
+    "postcss-scss": "^3.0.5"
   }
 }
